--- a/android-library/build.gradle
+++ b/android-library/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 dependencies {
     implementation("org.jetbrains.kotlin.android:org.jetbrains.kotlin.android.gradle.plugin:1.8.0")
-    implementation("com.android.application:com.android.application.gradle.plugin:8.0.0-alpha10")
+    implementation("com.android.application:com.android.application.gradle.plugin:8.0.0-beta01")
 }
 
 gradlePlugin {
